`z-index` fixes

--- a/static/logo-anim.css
+++ b/static/logo-anim.css
@@ -112,7 +112,7 @@
 }
 #svg-container{
 	font-size: 15rem;
-	height: 70vh;
+	height: 50vh;
 	width: 100%;
 }
 #c-usetag{
